Update and rename inidex.html to iniex.html

--- a/iniex.html
+++ b/iniex.html
@@ -45,7 +45,7 @@
         <section id="home" class="section active">
             <div class="hero-container">
                 <div class="hero-image">
-                    <img src="https://images.unsplash.com/photo-1583266360058-05a3d4c3313b?w=800" alt="Maa Saraswati" id="saraswatiImage">
+                    <img src="img.jpg?w=800" alt="Maa Saraswati" id="saraswatiImage">
                     <div class="vandana-overlay">
                         <p class="vandana-text">
                             "या कुन्देन्दुतुषारहारधवला<br>
@@ -369,4 +369,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
