--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </p>
                     </div>
                 </div>
-                
+                <li><a href="#donate" class="nav-link">सहयोग करें</a></li>
                 <div class="puja-info-card">
                     <h1>🌼 सरस्वती पूजा 2026 🌼</h1>
                     <div class="puja-date">
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="cta-section">
-                    <a href="#donate" class="btn-primary">🙏 अभी सहयोग करें</a>
+                    <li><a href="#donate" class="nav-link">सहयोग करें</a></li>
                 </div>
             </div>
         </section>
@@ -371,3 +371,4 @@
 </body>
 
 </html>
+
